[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leafflow-tg-bot"
version = "0.1.0"
description = "Telegram bot microservice for LeafFlow platform"
authors = [{name = "LeafFlow"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "aiogram>=3.2",
    "httpx>=0.25",
    "pydantic>=2.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "anyio>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tg_bot"]
